# smd-plc

./: README.md  plc.idl  plc.py  plc_control_service.xml  plc_publisher.cxx  plc_subscriber.cxx  requirements.txt  ros2_install.sh  run_tmux.sh
app/: README_x64Linux4gcc7.3.0.txt  USER_QOS_PROFILES.xml  makefile_plc_x64Linux4gcc7.3.0  plc.cxx  plc.hpp  plcPlugin.cxx  plcPlugin.hpp  plc_publisher.cxx  plc_publisher.hpp  plc_subscriber.cxx
app/urdf/: auv.urdf
docker/: Dockerfile
publisher_control/: README.txt  plc.py  plc_publisher.py
ros2_publisher/plc_msgs/plc_msgs/: CMakeLists.txt
ros2_publisher/plc_msgs/plc_msgs/msg/: CameraControlCustom.msg  LampControlCustom.msg  PanAndTiltControlCustom.msg
ros2_publisher/plc_publisher/: CMakeLists.txt  package.xml  plc_publisher.py
ros2_publisher/plc_publisher/include/: plcpublisher.hpp
ros2_publisher/plc_publisher/src/: plcpublisher.cpp
